<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PDFSetFunctionActivity"

    android:background="@drawable/pdfbackground"
    >
    <View
        android:id="@+id/backPDFFunctionView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/bacgroundColor"
        >

    </View>
    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/backPDFFunction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/backlast"
        android:layout_marginLeft="10dp"
        />

    <LinearLayout
        android:id="@+id/y1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bt_3"
        android:layout_below="@+id/backPDFFunction"
        android:gravity="center"
        android:paddingLeft="5dp">
        <TextView
            android:id="@+id/x1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/function_speed"
            android:textSize="15sp"
            android:background="@drawable/bt_3"/>
        <Spinner

            android:id="@+id/SpinnerSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_3"
            >

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/y2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/bt_3"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:paddingLeft="5dp"

        android:layout_below="@+id/y1">
        <TextView
            android:id="@+id/x2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/function_density"
            android:textSize="15sp"
            android:background="@drawable/bt_3"/>
        <Spinner

            android:id="@+id/SpinnerDensity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_3"
            >

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/y3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/bt_3"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/y2"
        android:gravity="center"
        android:paddingLeft="5dp">
        <TextView
            android:id="@+id/x3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/function_contrast"
            android:textSize="15sp"
            android:background="@drawable/bt_3"/>
        <TextView
            android:id="@+id/ContrastNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="60"
            android:textSize="15sp"
            android:background="@drawable/bt_3"
            android:gravity="center"
            android:layout_gravity="center"
            android:drawableRight="@drawable/downlist"

            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/y4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/bt_3"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/y3"
        android:gravity="center"
        android:paddingLeft="5dp">
        <TextView
            android:id="@+id/x4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/function_dither"
            android:textSize="15sp"
            android:background="@drawable/bt_3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="right"
            android:background="@drawable/bt_3"

            >

            <!--<Switch-->
                <!--android:id="@+id/HalftoneFunction"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="40dp"-->
                <!--android:textOff="off"-->
                <!--android:textOn="on"-->
                <!--android:showText="true"-->
                <!--android:switchMinWidth="80dp"-->

                <!--android:layout_gravity="center"/>-->
            <TextView
                android:id="@+id/DitherNumberInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="50"
                android:textSize="15sp"
                android:background="@drawable/bt_3"
                android:gravity="center"
                android:layout_gravity="center"
                android:drawableRight="@drawable/downlist"

                />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/y5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/y4"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/y7"

            android:text="@string/function_halftone"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>
        <CheckBox
            android:id="@+id/CheckHalftone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/function_hdefault"
            android:textColor="#000000"
            android:buttonTint="@color/bacgroundColor"
            android:checked="true"
            android:layout_marginLeft="1dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_alignParentRight="true"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/y6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/bt_3"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/y5"
        android:gravity="center">
        <RadioGroup
            android:id="@+id/RadioGroupHalftone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/RadioDither"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/function_hdither"
                android:textSize="15sp"
                android:gravity="center"
                android:checked="true"
                android:theme="@style/My_CheckBox"
                android:layout_weight="1"/>
            <RadioButton
                android:theme="@style/My_CheckBox"
                android:id="@+id/RadioDiffusion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/function_hdiffusion"
                android:textSize="15sp"
                android:textColor="#000000"
               android:layout_weight="1"
                android:gravity="center"



                />
            <RadioButton
                android:id="@+id/RadioGrayscale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/function_hgrayscale"
                android:textSize="15sp"
                android:textColor="#000000"

                android:gravity="center"
                android:layout_weight="1"
                android:theme="@style/My_CheckBox"

                />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/y8"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/bt_3"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/y6"
        >
        <CheckBox
            android:id="@+id/CheckBarcodeProcess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/function_barcodeprocess"
            android:textColor="#000000"
            android:buttonTint="@color/bacgroundColor"
            android:checked="false"
            android:layout_marginLeft="1dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_alignParentRight="true"
            />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/y9"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/bt_3"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/y8"
        >
        <CheckBox
            android:id="@+id/CheckCutEmptyProcess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/function_cutprocess"
            android:textColor="#000000"
            android:buttonTint="@color/bacgroundColor"
            android:checked="false"
            android:layout_marginLeft="1dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_alignParentRight="true"
            />


    </LinearLayout>
    <!--<ImageView-->
        <!--android:layout_below="@+id/y2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->

        <!--android:src="@drawable/pdfbackground"-->
        <!--android:scaleType="fitCenter"/>-->

</RelativeLayout>